--- a/asset/css/config_BV.css
+++ b/asset/css/config_BV.css
@@ -27,6 +27,10 @@ body{
     margin: 5px auto;
     left: 50%;
     top: 50%;
+    scroll-behavior: auto;
+    height: 500px;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
     opacity: 0;
     transition-timing-function: ease-out;
     transition: 0.8s;
